[project]
name = "ga4-api-dim-met"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-analytics-admin>=0.24.0",
    "google-api-python-client>=2.168.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.2",
    "jupyterlab>=4.4.1",
]
